--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yzx.democollection">
 
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".DemoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".DemoApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoCollection">
@@ -16,11 +21,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
         <activity
             android:name=".ui.bottomnavigationview.BottomNavigationViewActivity"
             android:label="BottomNavigationViewActivity" />
-        <activity android:name=".ui.search.SearchActivity" android:theme="@style/SearchActivity"/>
+        <activity
+            android:name=".ui.search.SearchActivity"
+            android:theme="@style/SearchActivity" />
+        <activity
+            android:name=".ui.livedata.LiveDataActivity"
+            android:label="LiveDataActivity" />
     </application>
 
 </manifest>
